fix form layout issues

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -331,6 +331,7 @@ nav
     @media screen and (max-width: $breakpoint-tablet-width)
       text-align: left
   input 
+    color: white
     width: 100%
     display: block
     height: 50px
@@ -339,7 +340,7 @@ nav
   textarea
     width: 100%
     display: block
-    height: 90px
+    height: 65px
     border: white solid 1px
     background-color: rgba(255, 255, 255, 0.42)
   button
